Widgets: Basketball and Volleyball play-by-play word wrapping fix for mobile/small screen devices

--- a/widgets/src/less/base/base.less
+++ b/widgets/src/less/base/base.less
@@ -454,6 +454,10 @@ label {
                     text-align: right;
                     white-space: normal;
                 }
+                &.digital-scout-play-by-play-team-home {
+                    text-align: left;
+                    white-space: normal;
+                }
             }
         }
     }
